syntax = "proto3";

package rivet.backend.pkg.faker.build;

import "legacy/proto/common.proto";
import "legacy/proto/backend/faker.proto";
import "google/protobuf/empty.proto";

message Request {
	optional rivet.common.Uuid game_id = 1;
	optional rivet.common.Uuid env_id = 4;
	rivet.backend.faker.Image image = 2;
	optional string fs_path = 3;
}

message Response {
	optional rivet.common.Uuid build_id = 1;
}
